--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/images/splashpage/
     - assets/images/intropage/
     - assets/icons/
 
