--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/images/
     - assets/images/splashpage/
     - assets/images/intropage/
     - assets/icons/
