--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   icons_plus: ^5.0.0
   smooth_page_indicator: ^1.2.0+3
+  google_maps_flutter: ^2.9.0
+  calendar_date_picker2: ^1.1.7
 
   # -----------------------------------------------------
   # Backend
