--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ flutter:
     - assets/images/intropage/
     - assets/images/home/
     - assets/images/home/homepage/
+    - assets/images/other/market/
     - assets/icons/
     - assets/icons/home/homepage/
     - assets/translations/
