--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   google_maps_flutter: ^2.9.0
   calendar_date_picker2: ^1.1.7
   google_fonts: ^6.2.1
+  fl_chart: ^0.70.0
 
   # -----------------------------------------------------
   # Backend
