--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "IDX.aI.enableInlineCompletion": true,
   "IDX.aI.enableCodebaseIndexing": true,
-  "cmake.sourceDirectory": "C:/Developer/DOTS/Pet_Tracker/linux"
+  "cmake.sourceDirectory": "/Users/birkan/developer/projects/dots/Pet_Tracker/linux"
 }
