--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,13 @@ dependencies:
   easy_localization: ^3.0.7
   # -> Qr Code Generator
   pretty_qr_code: ^3.3.0
+  permission_handler: ^11.3.0
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
-
 
 flutter:
   uses-material-design: true
@@ -59,6 +60,7 @@ flutter:
     - assets/images/other/pets/
     - assets/icons/
     - assets/icons/home/homepage/
+    - assets/icons/home/map/
     - assets/translations/
     - assets/agreements/en/
     - assets/agreements/tr/
